   * [end_turn] now waits for the event to finish before ending the turn
   * it is now possible to use Pango markup in storyscreen text
   * it is now possible to specify a custom title= in [story] [part]s
   * [story] [part]s' text placement may be changed with text_layout=; it
     currently supports "top", "middle" and "bottom" (default)
   * new tags [store_unit_type] and [store_unit_type_ids] were added
   * allow direct WML unit modification of "halo" attribute
 * Miscellaneous and bugfixes:
   * [music], [sound], [sound_source] and [label] should work again on
     WML prestart events; this means most music playlists should work again
     (bug #14039)
   * 'Recruit' and 'recall' don't appear in context menus unless the
     leader is on a keep. (bug #13856 and #13855)
   * wmllint updated to accomodate new drake names. Gladiator changes must
     still be done by hand.
   * No longer "crash" upon invalid pango markup
   * It's now possible to display the area a widget uses, for debug purposes
   * The widget in a stacked widget now grows properly

Version 1.7.2:
 * Campaigns:
   * Son of the Black Eye
     * changed Orcish Shaman movetype from smallfoot to orcishfoot
 * Graphics:
    * New portrait for male and female Footpad, male and female Outlaw,
      Horseman, Drake Clasher, Goblin Wolf Rider, Goblin Pillager, Dwarf 
      Explorer, Dwarf Scout, Cavalryman, Skeleton.
    * New unit graphics and animations for the Dwarvish Scout, Pathfinder,
      and Explorer; Drake Clasher, Slasher, Warden, Gladiator, Enforcer.
 * Language and i18n:
   * Updated translations: Czech, Dutch, Estonian, Finnish, French, German,
     Italian, Lithuanian, Polish, Russian, Serbian, Slovak
 * Terrains:
   * New terrain: drake village
 * User interface:
   * Add an icon to show whether or not the user finished a campaign
   * Fixed bug #13831: Bug with team labels
   * Added a new experimental stacked widget widget
   * Added support for Growl notifications